--- a/templates/index.html
+++ b/templates/index.html
@@ -61,10 +61,15 @@
             }
 
             #erro-mensagem {
+                background-color: rgba(255, 255, 255, 0.8);
                 color: rgb(0, 0, 0);
                 font-weight: bold;
                 margin-top: 5px;
-                height: 18px;
+                height: auto;
+                padding: 8px 12px;
+                border-radius: 5px;
+                max-width: 400px;
+                text-align: center;
             }
             
             .mensagem {
