Adicionando balão na mensagem acima e alterando algumas perguntas.

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,13 @@
             }
     
             h2 {
+                background-color: rgba(0, 0, 0, 0.5);
                 margin-bottom: 20px;
                 font-size: 2rem;
+                text-align: center;height: auto;
+                padding: 8px 12px;
+                border-radius: 5px;
+                max-width: 400px;
                 text-align: center;
             }
     
